...

export const CONCORDIA_BUILDINGS: Building[] = [
  // --- SIR GEORGE WILLIAMS (SGW) CAMPUS ---
  {
    id: "H",
    name: "Hall",
    fullName: "Henry F. Hall Building",
    campus: "SGW",
    info: "The central hub of SGW campus. Houses the Gina Cody School of Engineering, large lecture theatres, the 7th-floor student lounge, and the DB Clarke Theatre. Features a popular cafeteria and tunnel access to the LB building.",
    coordinates: [
      { latitude: 45.497159, longitude: -73.579554 },
      { latitude: 45.497722, longitude: -73.579022 },
      { latitude: 45.497387, longitude: -73.578305 },
...
    image:
      "https://nck.ca/wp-content/uploads/2021/08/NCK-Universite-Concordia-University-Pavillon-EV-Montreal-2021-1-1401x2000.jpg",
  },
  {
    id: "MB",
    name: "MB",
    fullName: "John Molson Building",
    campus: "SGW",
    info: "The flagship building for the John Molson School of Business. It features a stunning tiered atrium, several private study rooms, a trading lab, and a direct tunnel link to the Guy-Concordia Metro.",
    coordinates: [
      { latitude: 45.495531, longitude: -73.579224 },
      { latitude: 45.495197, longitude: -73.578468 },
      { latitude: 45.494941, longitude: -73.5788 },
...
